--- a/platforms/ios/www/css/index.css
+++ b/platforms/ios/www/css/index.css
@@ -86,10 +86,11 @@ body {
     position: relative;
 }
 
-h1 {
+#header h1 {
     font-size: 1.7em;
     font-weight: 400;
     line-height: 66px;
+    padding: 0;
 }
 
 #header span {
@@ -117,6 +118,10 @@ h1 {
 
 .display span:select {
     color: #ee6e73;
+}
+
+.ui-content {
+    padding: 0;
 }
 
 .icon-menu {
