--- a/www/css/index.css
+++ b/www/css/index.css
@@ -78,7 +78,7 @@ body {
 
 /* Portrait layout (default) */
 .app {
-    padding:20px 0px 0px 0px;     /* image height is 200px (bottom 20px are overlapped with text) */
+    /* padding:20px 0px 0px 0px;  */    /* image height is 200px (bottom 20px are overlapped with text) */
     background-color: #fff;
 }
 
@@ -181,7 +181,7 @@ body {
     float: right;
 }
 
-#articlegrid .article .image { 
+#articlegrid .article .image {
     max-width: 100%;
 }
 
