--- a/www/css/index.css
+++ b/www/css/index.css
@@ -303,7 +303,7 @@ body {
 
 input[type=range] {
     -webkit-appearance: none;
-    width: 100%; 
+    width: 100%;
     height: 1px;
     background-color: #000;
 }
@@ -330,4 +330,13 @@ input[type=range]::-webkit-slider-thumb {
     color: #f0f0f0;
     font-weight: 300;
     text-align: center;
+}
+
+#loader {
+    display: block;
+    position: absolute;
+    top:50%;
+    left:50%;
+    margin-left: -66px;
+    width: 133px;
 }
